Insert change to allow submit