@@ -1,18 +1,23 @@
 package io.airbyte.integrations.source.mssql.initialsync;
 
-import static io.airbyte.integrations.source.mssql.MssqlCdcHelper.*;
+import static io.airbyte.integrations.source.mssql.MssqlCdcHelper.getDebeziumProperties;
+import static io.airbyte.integrations.source.mssql.MssqlQueryUtils.getTableSizeInfoForStreams;
 import static io.airbyte.integrations.source.mssql.MssqlQueryUtils.prettyPrintConfiguredAirbyteStreamList;
+import static io.airbyte.integrations.source.mssql.initialsync.MssqlInitialLoadStateManager.ORDERED_COL_STATE_TYPE;
+import static io.airbyte.integrations.source.mssql.initialsync.MssqlInitialLoadStateManager.STATE_TYPE_KEY;
 
 import com.fasterxml.jackson.databind.JsonNode;
+import com.google.common.collect.Sets;
 import io.airbyte.cdk.db.jdbc.JdbcDatabase;
 import io.airbyte.cdk.db.jdbc.JdbcUtils;
+import io.airbyte.cdk.integrations.base.AirbyteTraceMessageUtility;
 import io.airbyte.cdk.integrations.debezium.AirbyteDebeziumHandler;
-import io.airbyte.cdk.integrations.debezium.internals.DebeziumPropertiesManager;
 import io.airbyte.cdk.integrations.debezium.internals.DebeziumPropertiesManager.DebeziumConnectorType;
 import io.airbyte.cdk.integrations.debezium.internals.RecordWaitTimeUtil;
 import io.airbyte.cdk.integrations.debezium.internals.mssql.MssqlDebeziumStateUtil;
 import io.airbyte.cdk.integrations.debezium.internals.mssql.MssqlDebeziumStateUtil.MssqlDebeziumStateAttributes;
 import io.airbyte.cdk.integrations.source.relationaldb.CdcStateManager;
+import io.airbyte.cdk.integrations.source.relationaldb.DbSourceDiscoverUtil;
 import io.airbyte.cdk.integrations.source.relationaldb.TableInfo;
 import io.airbyte.cdk.integrations.source.relationaldb.models.CdcState;
 import io.airbyte.cdk.integrations.source.relationaldb.models.OrderedColumnLoadStatus;
@@ -21,25 +26,34 @@ import io.airbyte.commons.json.Jsons;
 import io.airbyte.commons.util.AutoCloseableIterator;
 import io.airbyte.commons.util.AutoCloseableIterators;
 import io.airbyte.integrations.source.mssql.MssqlCdcConnectorMetadataInjector;
-import io.airbyte.integrations.source.mssql.MssqlCdcHelper;
 import io.airbyte.integrations.source.mssql.MssqlCdcSavedInfoFetcher;
 import io.airbyte.integrations.source.mssql.MssqlCdcStateHandler;
 import io.airbyte.integrations.source.mssql.MssqlCdcTargetPosition;
+import io.airbyte.integrations.source.mssql.MssqlQueryUtils;
 import io.airbyte.protocol.models.CommonField;
 import io.airbyte.protocol.models.v0.AirbyteMessage;
+import io.airbyte.protocol.models.v0.AirbyteStateMessage;
 import io.airbyte.protocol.models.v0.AirbyteStreamNameNamespacePair;
 import io.airbyte.protocol.models.v0.ConfiguredAirbyteCatalog;
 import io.airbyte.protocol.models.v0.ConfiguredAirbyteStream;
+import io.airbyte.protocol.models.v0.StreamDescriptor;
+import io.airbyte.protocol.models.v0.SyncMode;
 import io.debezium.connector.sqlserver.Lsn;
 import java.sql.JDBCType;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.OptionalInt;
+import java.util.Set;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -111,7 +125,8 @@ public class MssqlInitialReadUtil {
 
       final MssqlInitialLoadHandler initialLoadHandler = new MssqlInitialLoadHandler(sourceConfig, database,
           sourceOperations, quoteString, initialLoadStateManager,
-          namespacePair -> Jsons.emptyObject()); // TODO: add table size?
+          namespacePair -> Jsons.emptyObject(),
+          getTableSizeInfoForStreams(database, initialLoadStreams.streamsForInitialLoad(), quoteString));
 
       initialLoadIterator.addAll(initialLoadHandler.getIncrementalIterators(
           new ConfiguredAirbyteCatalog().withStreams(initialLoadStreams.streamsForInitialLoad()),
@@ -138,53 +153,67 @@ public class MssqlInitialReadUtil {
     getDebeziumProperties(database, catalog, false),
     DebeziumConnectorType.RELATIONALDB,
     emittedAt,
-    true); // TODO: check why add db name to stete
+    true); // TODO: check why add db name to state
 
-
-
-    // Determine if new stream(s) have been added to the catalog after initial sync of existing streams
-    final List<ConfiguredAirbyteStream> streamsToSnapshot = identifyStreamsToSnapshot(catalog, stateManager);
-    final ConfiguredAirbyteCatalog streamsToSnapshotCatalog = new ConfiguredAirbyteCatalog().withStreams(streamsToSnapshot);
-
-    final Supplier<AutoCloseableIterator<AirbyteMessage>> incrementalIteratorsSupplier = () -> handler.getIncrementalIterators(
-        catalog,
-        new MssqlCdcSavedInfoFetcher(stateManager.getCdcStateManager().getCdcState()),
-        new MssqlCdcStateHandler(stateManager),
-        mssqlCdcConnectorMetadataInjector,
-        getDebeziumProperties(database, catalog, false),
-        DebeziumPropertiesManager.DebeziumConnectorType.RELATIONALDB,
-        emittedAt,
-        true);
-
-    /*
-     * If the CDC state is null or there is no streams to snapshot, that means no stream has gone
-     * through the initial sync, so we return the list of incremental iterators
-     */
-    if ((stateManager.getCdcStateManager().getCdcState() == null ||
-        stateManager.getCdcStateManager().getCdcState().getState() == null ||
-        streamsToSnapshot.isEmpty())) {
-      return List.of(incrementalIteratorsSupplier.get());
-    }
-
-    // Otherwise, we build the snapshot iterators for the newly added streams(s)
-    final AutoCloseableIterator<AirbyteMessage> snapshotIterators =
-        handler.getSnapshotIterators(streamsToSnapshotCatalog,
-            mssqlCdcConnectorMetadataInjector,
-            getDebeziumProperties(database, catalog, true),
-            new MssqlCdcStateHandler(stateManager),
-            DebeziumPropertiesManager.DebeziumConnectorType.RELATIONALDB,
-            emittedAt);
-    /*
-     * The incremental iterators needs to be wrapped in a lazy iterator since only 1 Debezium engine for
-     * the DB can be running at a time
-     */
-    return List.of(snapshotIterators, AutoCloseableIterators.lazyIterator(incrementalIteratorsSupplier, null));
+    // This starts processing the transaction logs as soon as initial sync is complete, this is a bit different
+    // from the current cdc syncs.
+    // We finish the current CDC once the initial snapshot is complete and the next sync starts
+    // processing the transaction logs
+    return Collections.singletonList(
+        AutoCloseableIterators.concatWithEagerClose(
+            Stream
+                .of(initialLoadIterator, Collections.singletonList(AutoCloseableIterators.lazyIterator(incrementalIteratorsSupplier, null)))
+                .flatMap(Collection::stream)
+                .collect(Collectors.toList()),
+            AirbyteTraceMessageUtility::emitStreamStatusTrace));
   }
 
   public static InitialLoadStreams cdcStreamsForInitialOrderedCoumnLoad(final CdcStateManager stateManager,
       final ConfiguredAirbyteCatalog fullCatalog,
       final boolean savedOffsetStillPresentOnServer) {
+    if (!savedOffsetStillPresentOnServer) {
+      return new InitialLoadStreams(
+          fullCatalog.getStreams()
+              .stream()
+              .filter(c -> c.getSyncMode() == SyncMode.INCREMENTAL)
+              .collect(Collectors.toList()),
+          new HashMap<>());
+    }
+    final AirbyteStateMessage airbyteStateMessage = stateManager.getRawStateMessage();
+    final Set<AirbyteStreamNameNamespacePair> streamsStillInOcSync = new HashSet<>();
 
+    // Build a map of stream <-> initial load status for streams that currently have an initial primary
+    // key load in progress.
+    final Map<AirbyteStreamNameNamespacePair, OrderedColumnLoadStatus> pairToInitialLoadStatus = new HashMap<>();
+    if (airbyteStateMessage != null && airbyteStateMessage.getGlobal() != null && airbyteStateMessage.getGlobal().getStreamStates() != null) {
+      airbyteStateMessage.getGlobal().getStreamStates().forEach(stateMessage -> {
+        final JsonNode streamState = stateMessage.getStreamState();
+        final StreamDescriptor streamDescriptor = stateMessage.getStreamDescriptor();
+        if (streamState == null || streamDescriptor == null) {
+          return;
+        }
+
+        if (streamState.has(STATE_TYPE_KEY)) {
+          if (streamState.get(STATE_TYPE_KEY).asText().equalsIgnoreCase(ORDERED_COL_STATE_TYPE)) {
+            final OrderedColumnLoadStatus orderedColumnLoadStatus = Jsons.object(streamState, OrderedColumnLoadStatus.class);
+            final AirbyteStreamNameNamespacePair pair = new AirbyteStreamNameNamespacePair(streamDescriptor.getName(),
+                streamDescriptor.getNamespace());
+            pairToInitialLoadStatus.put(pair, orderedColumnLoadStatus);
+            streamsStillInOcSync.add(pair);
+          }
+        }
+      });
+    }
+
+    final List<ConfiguredAirbyteStream> streamForOcSync = new ArrayList<>();
+    fullCatalog.getStreams().stream()
+        .filter(stream -> streamsStillInOcSync.contains(AirbyteStreamNameNamespacePair.fromAirbyteStream(stream.getStream())))
+        .map(Jsons::clone)
+        .forEach(streamForOcSync::add);
+    final List<ConfiguredAirbyteStream> newlyAddedStreams = identifyStreamsToSnapshot(fullCatalog, stateManager.getInitialStreamsSynced());
+    streamForOcSync.addAll(newlyAddedStreams);
+
+    return new InitialLoadStreams(streamForOcSync, pairToInitialLoadStatus);
   }
 
   public static Map<io.airbyte.protocol.models.AirbyteStreamNameNamespacePair, OrderedColumnInfo> initPairToOrderedColumnInfoMap(
@@ -192,6 +221,50 @@ public class MssqlInitialReadUtil {
       final InitialLoadStreams initialLoadStreams,
       final Map<String, TableInfo<CommonField<JDBCType>>> tableNameToTable,
       final String quoteString) {
+    final Map<io.airbyte.protocol.models.AirbyteStreamNameNamespacePair, OrderedColumnInfo> pairToOcInfoMap = new HashMap<>();
+    // For every stream that is in initial ordered column sync, we want to maintain information about the
+    // current ordered column info associated with the
+    // stream
+    initialLoadStreams.streamsForInitialLoad.forEach(stream -> {
+      final io.airbyte.protocol.models.AirbyteStreamNameNamespacePair pair =
+          new io.airbyte.protocol.models.AirbyteStreamNameNamespacePair(stream.getStream().getName(), stream.getStream().getNamespace());
+      final OrderedColumnInfo ocInfo = getOrderedColumnInfo(database, stream, tableNameToTable, quoteString);
+      pairToOcInfoMap.put(pair, ocInfo);
+    });
+    return pairToOcInfoMap;
+  }
 
+  final static OrderedColumnInfo getOrderedColumnInfo(final JdbcDatabase database,
+      final ConfiguredAirbyteStream stream,
+      final Map<String, TableInfo<CommonField<JDBCType>>> tableNameToTable,
+      final String quoteString) {
+    // For cursor-based syncs, we cannot always assume a ordered column field exists. We need to handle the
+    // case where it does not exist when we support
+    // cursor-based syncs.
+    if (stream.getStream().getSourceDefinedPrimaryKey().size() > 1) { // TODO: validate the seleted column rather than primary key
+      LOGGER.info("Composite primary key detected for {namespace, stream} : {}, {}", stream.getStream().getNamespace(), stream.getStream().getName());
+    }
+    final String ocFieldName = stream.getStream().getSourceDefinedPrimaryKey().get(0).get(0);
+    final String fullyQualifiedTableName =
+        DbSourceDiscoverUtil.getFullyQualifiedTableName(stream.getStream().getNamespace(), stream.getStream().getName());
+    final TableInfo<CommonField<JDBCType>> table = tableNameToTable
+        .get(fullyQualifiedTableName);
+    final JDBCType ocFieldType = table.getFields().stream()
+        .filter(field -> field.getName().equals(ocFieldName))
+        .findFirst().get().getType();
+
+    final String ocMaxValue = MssqlQueryUtils.getMaxOcValueForStream(database, stream, ocFieldName, quoteString);
+    return new OrderedColumnInfo(ocFieldName, ocFieldType, ocMaxValue);
+  }
+
+  public static List<ConfiguredAirbyteStream> identifyStreamsToSnapshot(final ConfiguredAirbyteCatalog catalog,
+      final Set<AirbyteStreamNameNamespacePair> alreadySyncedStreams) {
+    final Set<AirbyteStreamNameNamespacePair> allStreams = AirbyteStreamNameNamespacePair.fromConfiguredCatalog(catalog);
+    final Set<AirbyteStreamNameNamespacePair> newlyAddedStreams = new HashSet<>(Sets.difference(allStreams, alreadySyncedStreams));
+    return catalog.getStreams().stream()
+        .filter(c -> c.getSyncMode() == SyncMode.INCREMENTAL)
+        .filter(stream -> newlyAddedStreams.contains(AirbyteStreamNameNamespacePair.fromAirbyteStream(stream.getStream())))
+        .map(Jsons::clone)
+        .collect(Collectors.toList());
   }
 }
